@@ -3,6 +3,10 @@
 	* Check if '-msoft-float' option is supported by compiler when
 	configuring for a 2.4.x kernel.  Bug report by Mark Haney
 
+	* In multithreaded loop send a TERM signal to the main thread if
+	one of the other threads exit.  Needed on FreeBSD for a clean exit
+	on umount.  Should not cause any harm on Linux either
+
 2005-11-28  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix bug in 32-bit file handle compatibility
